# excel-product-data

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.local.yml  docker-compose.yml  docker.env  procfile  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy.yml
core/: celery.py  paginations.py  settings.py  urls.py  utils.py
excel_import_export/: admin.py  apps.py  models.py  resources.py  serializers.py  tasks.py  urls.py  utils.py  views.py
excel_import_export/management/commands/: createsuperuseradmin.py
excel_import_export/migrations/: 0001_initial.py  0002_logs_created_at_logs_message_logs_remarks_and_more.py  0003_rename_logs_log.py  0004_rename_lifestype_image_link_productitem_lifestyle_image_link.py  0005_alter_productitem_options_and_more.py  0006_alter_brand_name_alter_color_name_alter_gender_name_and_more.py  0007_alter_productitem_gtin_alter_productitem_model.py  0008_rename_google_product_catagories_productitem_google_product_catagory.py  0009_alter_productitem_options_and_more.py  0010_rename_additional_image_productitem_additional_image_link_and_more.py  0011_rename_additional_image_link_productitem_additional_image_links.py  0012_alter_log_message.py  0013_alter_log_options.py  0014_alter_log_status.py
local/: Dockerfile
temp/: products.xlsx
